--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/changmingbill/my-website"
+    "url": "https://github.com/changmingbill/my-website"
   },
   "keywords": [],
   "author": "Jacobo Martinez",
@@ -31,7 +31,7 @@
     "style-loader": "^1.0.2",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
